<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_visualization_fleet_states</name>
  <version>1.1.0</version>
  <description>Fleet state visualizer</description>
  <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>rmf_fleet_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rmf_traffic_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rmf_building_map_msgs</exec_depend>
  <exec_depend>rmf_visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
