<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_visualization_navgraphs</name>
  <version>2.0.0</version>
  <description>A package to visualiize the navigation graphs of fleets</description>
  <maintainer email="yadunund@openrobotics.com">Yadunund</maintainer>
  <license>Apache license 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_building_map_msgs</depend>
  <depend>rmf_visualization_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmf_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
